RESOLVED FIXED173958
Crash in WebCore::ScrollingTreeFixedNode::updateLayersAfterAncestorChange
https://bugs.webkit.org/show_bug.cgi?id=173958
Summary Crash in WebCore::ScrollingTreeFixedNode::updateLayersAfterAncestorChange
Ryosuke Niwa
Reported 2017-06-28 20:25:32 PDT
We're crashing inside CALayer sometimes: 24 QuartzCore: -[CALayer setPosition:] ==> 24 WebCore: WebCore::ScrollingTreeFixedNode::updateLayersAfterAncestorChange(WebCore::ScrollingTreeNode const&, WebCore::FloatRect const&, WebCore::FloatSize const&) <== 24 WebCore: WebCore::ScrollingTreeFrameScrollingNodeIOS::updateLayersAfterViewportChange(WebCore::FloatRect const&, double) 24 WebKit: -[WKContentView didUpdateVisibleRect:unobscuredRect:unobscuredRectInScrollViewCoordinates:obscuredInset:inputViewBounds:scale:minimumScale:inStableState:isChangingObscuredInsetsInteractively:enclosedInScrollableAncestorView:]
Attachments
Fixes the crash (2.29 KB, patch)
2017-06-28 20:42 PDT, Ryosuke Niwa
no flags
Ryosuke Niwa
Comment 1 2017-06-28 20:25:44 PDT
Ryosuke Niwa
Comment 2 2017-06-28 20:42:32 PDT
Created attachment 314104 [details] Fixes the crash
Ryosuke Niwa
Comment 3 2017-06-28 20:58:18 PDT
Comment on attachment 314104 [details] Fixes the crash Clearing flags on attachment: 314104 Committed r218915: <http://trac.webkit.org/changeset/218915>
Ryosuke Niwa
Comment 4 2017-06-28 20:58:20 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.