Crash in WebCore::ScrollingTreeFixedNode::updateLayersAfterAncestorChange https://bugs.webkit.org/show_bug.cgi?id=173958

Reviewed by Simon Fraser.

The crashed is most likely caused by updateLayersAfterAncestorChange calling [CALayer setPosition]
with a CGPoint which contains the x coordinate or the y coordinate of NaN.

Simon and I inpected the code but we couldn't figure out how we get there. Detect this case and bail out.
Also log the relevant values and debug assert when this condition is hit to help identifying the root cause.

* page/scrolling/mac/ScrollingTreeFixedNode.mm:
(WebCore::ScrollingTreeFixedNode::updateLayersAfterAncestorChange):


Canonical link: https://commits.webkit.org/190791@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@218915 268f45cc-cd09-0410-ab3c-d52691b4dbfc